# transcript-kun

./: .gitignore  2026-02-20_森田真生さんダイアローグ_medium.txt  2026-02-20_森田真生さんダイアローグ_small.txt  README.md  pyproject.toml
src/transcript_kun/: __init__.py  __main__.py
src/transcript_kun/application/: transcribe.py
src/transcript_kun/domain/: entities.py  policies.py  ports.py
src/transcript_kun/infrastructure/: audio_prober.py  whisperx_service.py  writers.py
src/transcript_kun/interface/: cli.py
tests/: test_cli.py  test_entities.py  test_policies.py  test_use_case.py  test_writers.py
