[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcript-kun"
version = "0.1.0"
description = "M4A audio transcription with speaker diarization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
gpu = [
    "whisperx>=3.1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
transcript-kun = "transcript_kun.interface.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript_kun"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
